--- a/study-summer/home/app/sass/variables.scss
+++ b/study-summer/home/app/sass/variables.scss
@@ -2,5 +2,5 @@ $text: #292F48;
 $red: #FF3434;
 $blue: #6A7EFC;
 
-$mobile-widths: "max-width: 768px";
-$tablet-widths: "max-width: 1210px";
+$mobile-widths: "max-width: 1200px";
+$notebook-widths: "max-width: 1350px";
