--- a/study-summer/home/app/sass/blocks/contacts.scss
+++ b/study-summer/home/app/sass/blocks/contacts.scss
@@ -187,7 +187,7 @@
   font-weight: 400;
   font-family: inherit;
   border: 0;
-  border-bottom: 1px solid $text;
+  border-bottom: 1px solid #BDC3C7;
   cursor: pointer;
   opacity: 0.6;
   outline: 0;
@@ -285,5 +285,64 @@
   
   &--right {
     background-image: url('../img/contacts-photo-right-bg.jpg');
+  }
+}
+
+@media screen and ($notebook-widths) {
+  .contacts__column {
+    
+    &--left {
+      width: 60%;
+    }
+    
+    &--right {
+      width: 40%;
+    }
+  }
+  
+  .contacts__subcolumn {
+    
+    &:first-child {
+      margin-right: 30px;
+    }
+  }
+  
+  .contacts__row {
+    
+    &--double {
+      flex-grow: 1;
+      height: auto;
+    }
+  }
+  
+  .contacts__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 30px;
+  }
+  
+  .contacts__phones {
+    margin-bottom: 0;
+  }
+  
+  .contacts__set {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  
+  .contacts__group {
+    
+    &:nth-child(odd) {
+      margin-right: 0;
+    }
+  }
+  
+  .contacts__input {
+    margin-bottom: 25px;
+    
+    &:last-child {
+      margin-bottom: 30px;
+    }
   }
 }
