--- a/study-summer/home/app/sass/blocks/edge.scss
+++ b/study-summer/home/app/sass/blocks/edge.scss
@@ -119,3 +119,39 @@
   font-weight: 400;
   text-align: center
 }
+
+@media screen and (max-width: 1550px) {
+  .edge__content {
+    position: relative;
+    bottom: -35px;
+    width: 960px;
+  }
+  
+  .edge__title {
+    margin-bottom: 70px;
+    font-size: 32px;
+  }
+  
+  .edge__item {
+    width: 300px;
+    height: 165px;
+    padding-top: 50px;
+    padding-right: 10px;
+    padding-bottom: 0;
+    padding-left: 10px;
+    
+    &::before {
+      width: 80px;
+      height: 80px;
+    }
+  }
+  
+  .edge__name {
+    margin-bottom: 10px;
+    font-size: 18px;
+  }
+  
+  .edge__text {
+    font-size: 15px;
+  }
+}
