--- a/study-summer/home/app/sass/blocks/uk.scss
+++ b/study-summer/home/app/sass/blocks/uk.scss
@@ -191,3 +191,40 @@
     transform: rotate(180deg);
   }
 }
+
+@media screen and ($notebook-widths) {
+  .uk__column {
+    width: 60%;
+    
+    &--left {
+      width: 40%;
+    }
+  }
+  
+  .uk__content {
+    padding: 30px;
+  }
+  
+  .uk__subtitle {
+    box-sizing: border-box;
+    width: 330px;
+    font-size: 18px;
+    
+    &--number {
+      font-size: 30px;
+    }
+  }
+  
+  .uk__title {
+    margin-bottom: 20px;
+    font-size: 28px;
+  }
+  
+  .uk__list {
+    margin-bottom: 20px;
+  }
+  
+  .uk__item {
+    font-size: 15px;
+  }
+}
