--- a/study-summer/home/app/sass/blocks/usa.scss
+++ b/study-summer/home/app/sass/blocks/usa.scss
@@ -183,3 +183,40 @@
     background-color: rgba(0, 0, 0, 0.2);
   }
 }
+
+@media screen and ($notebook-widths) {
+  .usa__column {
+    width: 60%;
+    
+    &--right {
+      width: 40%;
+    }
+  }
+  
+  .usa__content {
+    padding: 30px;
+  }
+  
+  .usa__subtitle {
+    box-sizing: border-box;
+    width: 330px;
+    font-size: 18px;
+    
+    &--number {
+      font-size: 30px;
+    }
+  }
+  
+  .usa__title {
+    margin-bottom: 20px;
+    font-size: 28px;
+  }
+  
+  .usa__list {
+    margin-bottom: 20px;
+  }
+  
+  .usa__item {
+    font-size: 15px;
+  }
+}
