--- a/study-summer/home/app/sass/blocks/header.scss
+++ b/study-summer/home/app/sass/blocks/header.scss
@@ -12,6 +12,12 @@
   z-index: 2;
 }
 
+.header__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .header__list {
   display: flex;
   align-items: center;
@@ -34,13 +40,6 @@
   
   &:active {
     transform: translateY(-5px) scale(0.95);
-  }
-}
-
-.header__item {
-  
-  &:nth-child(2) {
-    margin-left: auto;
   }
 }
 
@@ -96,6 +95,21 @@
   }
 }
 
+.header__menu {
+  display: none;
+  width: 28px;
+  height: 28px;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  background-image: url('../img/svg/nav-open.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  outline: none;
+  transition: 0.2s;
+}
+
 @media screen and ($notebook-widths) {
   .header {
     padding-right: 90px;
@@ -117,5 +131,22 @@
   .header__social {
     width: 25px;
     height: 25px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .header {
+    padding-top: 10px;
+    padding-right: 15px;
+    padding-bottom: 40px;
+    padding-left: 15px;
+  }
+  
+  .header__list {
+    display: none;
+  }
+  
+  .header__menu {
+    display: block;
   }
 }
