--- a/study-summer/home/app/sass/blocks/aside.scss
+++ b/study-summer/home/app/sass/blocks/aside.scss
@@ -16,3 +16,14 @@
     width: 70px;
   }
 }
+
+@media screen and ($mobile-widths) {
+  .aside {
+    top: auto;
+    right: auto;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 55px;
+  }
+}
