--- a/study-summer/home/app/sass/blocks/edge.scss
+++ b/study-summer/home/app/sass/blocks/edge.scss
@@ -156,12 +156,24 @@
   }
 }
 
-@media screen and ($mobile-widths) {
+@media screen and (max-width: 1100px) {
   .edge__content {
+    position: relative;
+    bottom: 0;
     width: 100%;
     margin-left: 0;
-    padding-right: 15px;
-    padding-left: 15px;
+    margin-bottom: -90px;
+  }
+  
+  .edge__title {
+    margin-bottom: 30px;
+  }
+  
+  .edge__wrapper {
+    position: relative;
+    width: 350px;
+    height: 430px;
+    margin: auto;
     overflow-y: scroll;
   }
   
@@ -169,6 +181,94 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 300%;
+    width: 1110px;
+    height: 430px;
+  }
+  
+  .edge__item {
+    width: 350px;
+    height: auto;
+    margin-top: 50px;
+    padding-bottom: 20px;
+    
+    &:first-child {
+      margin-bottom: 0;
+    }
+  }
+  
+  .edge__controls {
+    position: absolute;
+    right: 100px;
+    bottom: 0;
+    display: flex;
+  }
+  
+  .edge__toggle {
+    width: 40px;
+    height: 30px;
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    background-image: url('../img/svg/mobile-arrow.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    outline: none;
+    
+    &--prev {
+      border-left: 1px solid #FFFFFF;
+      transform: rotate(180deg);
+    }
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .edge {
+    position: relative;
+  }
+  
+  .edge__content {
+    position: static;
+    margin-bottom: 0;
+  }
+  
+  .edge__title {
+    margin-bottom: 10px;
+    padding-right: 15px;
+    padding-left: 15px;
+    font-size: 22px;
+  }
+  
+  .edge__wrapper {
+    width: 335px;
+  }
+  
+  .edge__item {
+    width: 335px;
+  }
+  
+  .edge__controls {
+    right: 15px;
+    bottom: 70px;
+  }
+}
+
+@media screen and (max-width: 325px) {
+  .edge__title {
+    margin-bottom: 20px;
+  }
+  
+  .edge__wrapper {
+    width: 300px;
+    height: 240px;
+  }
+  
+  .edge__list {
+    width: 1950px;
+    height: 220px;
+  }
+  
+  .edge__item {
+    width: 300px;
   }
 }
