--- a/study-summer/home/app/sass/variables.scss
+++ b/study-summer/home/app/sass/variables.scss
@@ -2,5 +2,6 @@ $text: #292F48;
 $red: #FF3434;
 $blue: #6A7EFC;
 
-$mobile-widths: "max-width: 1200px";
+$mobile-widths: "max-width: 800px";
+$tablet-widths: "max-width: 1200px";
 $notebook-widths: "max-width: 1350px";
