--- a/study-summer/home/app/sass/blocks/ireland.scss
+++ b/study-summer/home/app/sass/blocks/ireland.scss
@@ -230,6 +230,16 @@
   }
 }
 
+@media screen and ($tablet-widths) {
+  .ireland__column {
+    width: 70%;
+  
+    &--right {
+      width: 30%;
+    }
+  }
+}
+
 @media screen and ($mobile-widths) {
   .ireland__column {
     width: 100%;
