--- a/study-summer/home/app/sass/blocks/usa.scss
+++ b/study-summer/home/app/sass/blocks/usa.scss
@@ -221,6 +221,16 @@
   }
 }
 
+@media screen and ($tablet-widths) {
+  .usa__column {
+    width: 70%;
+  
+    &--right {
+      width: 30%;
+    }
+  }
+}
+
 @media screen and ($mobile-widths) {
   .usa__column {
     width: 100%;
