--- a/study-summer/home/app/sass/blocks/header.scss
+++ b/study-summer/home/app/sass/blocks/header.scss
@@ -213,10 +213,16 @@
       transform: scale(0.95);
     }
   }
+  
+  .header__social {
+    width: 35px;
+    height: 35px;
+  }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 370px) {
   .header__link {
+    margin-bottom: 25px;
     font-size: 25px;
   }
 }
