add thankyou page

--- a/study-summer/home/app/sass/style.scss
+++ b/study-summer/home/app/sass/style.scss
@@ -3,8 +3,6 @@
 @import 'global/base';
 @import 'global/fonts';
 
-@import 'blocks/preloader';
-
 @import 'blocks/aside';
 @import 'blocks/title';
 @import 'blocks/header';
@@ -20,3 +18,5 @@
 @import 'blocks/profit';
 
 @import 'blocks/video';
+
+@import 'blocks/thankyou';
