--- a/study-summer/home/app/sass/blocks/title.scss
+++ b/study-summer/home/app/sass/blocks/title.scss
@@ -147,9 +147,8 @@
   }
   
   .title__controls {
-    right: 15px;
+    left: 15px;
     bottom: 75px;
-    left: auto;
     width: 155px;
     padding: 0;
     background-color: transparent;
